[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tweepy-authlib"
description = 'Twitter Web App (Web 版公式クライアント) の内部 API を使い、Tweepy でスクリーンネームとパスワードで認証するためのライブラリ'
url = "https://github.com/tsukumijima/tweepy-authlib"
readme = "Readme.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["Twitter", "Tweepy", "Library"]
authors = [
    { name = "tsukumi" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "Brotli>=1.0.9",
    "js2py>=0.74",
    "tweepy>=4.12.1",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/tsukumijima/tweepy-authlib"
Issues = "https://github.com/tsukumijima/tweepy-authlib/issues"
Source = "https://github.com/tsukumijima/tweepy-authlib"

[tool.hatch.version]
path = "tweepy_authlib/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=tweepy_authlib --cov=tests {args}"
no-cov = "cov --no-cov {args}"
test = "python tests/test_main.py"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "tweepy_authlib/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
